@@ -1,3 +1,8 @@
+2007-07-10  Ales Hakl  <ales at hakl dot net>
+
+	* src/control.c (native_form_unwind_protect): unwind-protect
+	special form
+
 2007-07-09  Ales Hakl  <ales at hakl dot net>
 
 	* dfsch/magic.h (DFSCH_UNWIND): unwind-protect like construction
